--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h2 class="logo">MySite</h2>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">hhjhjhjHome</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
